# Entities

./: .gitignore  CMakeLists.txt  readme.md
Demo/: CMakeLists.txt  Demo.cpp
Entities/: CMakeLists.txt  Component.h  ComponentArray.h  Entities.cpp  Entities.h  Entity.h  Query.h  System.h  Utilities.h  World.h
Tests/: CMakeLists.txt  Tests.cpp
